--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
   <title>Index</title>
 </head>
 <body>
-Is webhosting on Dropbox possible? Click <a href="test.html">here</a> to check!
+Is webhosting on Github possible? Click <a href="test.html">here</a> to check!
 </body>
 </html>
