--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <title>Index</title>
 </head>
 <body>
-Is webhosting on Github possible? Click <a href="test.html">here</a> to check!
+<strong>Rescued website content:</strong><br>
+<a href="./eururalis/default.htm">Eururalis</a><br>
+
 </body>
 </html>
