--- a/eururalis/eururalis2.htm
+++ b/eururalis/eururalis2.htm
@@ -130,8 +130,8 @@ li {margin:0 0 0 -20}
                     download the full version of Eururalis 2.0 by pressing the 
                     download now button. Be aware that you need a fast internet 
                     connection because of the extent of the data that is needed: 
-                    more than 560 MB. You can also order the Eururalis 2.0 dvd 
-                    <a href="/app/register.html">here</a>.</p>
+                    more than 560 MB. <!--You can also order the Eururalis 2.0 dvd 
+                    <a href="/app/register.html">here</a>.--></p>
                   <p><a href="./app/index.html" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('download','','images/knop_download_over.gif',1)"><img src="images/knop_download.gif" alt="Download Eururalis 2.0 now" name="download" width="256" height="28" border="0"></a><br>
                   </p></td>
               </tr>
