--- a/eururalis/app/index.html
+++ b/eururalis/app/index.html
@@ -131,7 +131,9 @@ li {margin:0 0 0 -20}
                   </noscript>
                   In April 2011 a warning started appearing at startup, as a result of our decision not to renew the certificate again.
                   <!--You can ignore the warning - the application still works all right!-->
-                  It became necessary to abandon the JNLP protocol. We made it possible for you to still install the application though - but now directly onto your computer. You do so at your own risk. Download the installer <a href="Eururalis2.msi">here</a> (for Windows).
+                  It became necessary to abandon the JNLP protocol. We made it possible for you to still install the application though
+                  - but now directly onto your computer. You do so at your own risk. Download the installer 
+                  <a href="https://www.dropbox.com/s/hm055exbngcmd15/Eururalis2.msi?dl=0">here</a> (for Windows).
                   <br/>&nbsp;<br/>
                   Once installed, you can start the application by clicking <!--on the same link. Alternatively you can start
                   the application by -->doubleclicking the Eururalis2 shortcut on your desktop. <!--, even if you are offline.
