--- a/eururalis/app/index.html
+++ b/eururalis/app/index.html
@@ -135,7 +135,7 @@ li {margin:0 0 0 -20}
                   - but now directly onto your computer. You do so at your own risk. Download the installer 
                   <a href="https://www.dropbox.com/s/hm055exbngcmd15/Eururalis2.msi?dl=0" target="_new">here</a> (for Windows).
                   <br/>&nbsp;<br/>
-                  Once installed, you can start the application by clicking <!--on the same link. Alternatively you can start
+                  Once installed, you can start the application by <!--clicking on the same link. Alternatively you can start
                   the application by -->doubleclicking the Eururalis2 shortcut on your desktop. <!--, even if you are offline.
                   In case you have removed that shortcut, you can start the application from your Java Control Panel.
                   <script language="JavaScript">
