--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <html>
 <head>
   <title>Index</title>
+  <meta name="robots" content="index,follow">
+  <meta name="keywords" content="Eururalis, interactive tool, discussion support tool, support for policy makers, European rural areas" />
 </head>
 <body>
 <strong>Rescued website content:</strong><br>
